--- a/hardpage.html
+++ b/hardpage.html
@@ -13,6 +13,14 @@
   <div id="part_1">
      <fieldset>
        <legend>jQuery Validation</legend>
+       <details open style="float:right;">
+        <summary style="font-size: 19px;">Overview</summary>
+        <ol>
+          <li>I use valid function to valid all the input</li>
+          <li>Lorem, ipsum dolor sit amet </li>
+          <li>Lorem, ipsum dolor sit amet </li>
+        </ol>
+      </details>
        <form action="">
          <table cellpadding="7"> 
          <tr  >
@@ -84,6 +92,7 @@
      
      </fieldset>
   </div>
+
 </body>
 <script>
 
